add some comments

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <section>
             <button class="start-quiz">Start Quiz</button>
         </section>
+        <!-- quiz rules and chosse to continue or exit  -->
         <section>
             <div class="info-container">
                 <div class="info-header">
@@ -31,6 +32,8 @@
                 </div>
             </div>
         </section>
+        <!-- ----------------------------------------------------- -->
+        <!-- quiz questions ------------------------------- -->
         <section>
             <div class="questions-container">
                 <div class="question-header">
@@ -51,6 +54,7 @@
                 </div>
             </div>
         </section>
+        <!-- ------------------------------------------------------- -->
     </div>
     <!-- --------->
 
