add and edit some tags of timer

--- a/index.html
+++ b/index.html
@@ -38,7 +38,12 @@
             <div class="questions-container">
                 <div class="question-header">
                     <div class='header-title'>Awsome Quiz Application</div>
-                    <div class='header-timer'>Time Left <span id='timer'></span></div>
+                    <div class='header-timer'>
+                        <div class="time-content">Time Left</div> 
+                        <div class="timer-container">
+                            <div class='timer-number'></div>
+                        </div>
+                    </div>
                 </div>
                 <div class="question-content">
                     <div class="question-title"></div>
