add hr tag for timerline

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
                         </div>
                     </div>
                 </div>
+                <hr class="timer-line">
                 <div class="question-content">
                     <div class="question-title"></div>
                     <div class="options">
