add timerline container and get timerline in js

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
                         </div>
                     </div>
                 </div>
-                <hr class="timer-line">
+                <div class="timerLine-container">
+                    <hr class="timer-line">
+                </div>
                 <div class="question-content">
                     <div class="question-title"></div>
                     <div class="options">
