add quiz result html properties

--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
             </div>
         </section>
         <!-- ------------------------------------------------------- -->
+        <section>
+            <div class="result-container">
+                <div class="crown-container"></div>
+                <div class="result-text"></div>
+                <div class="rsltBtn-container">
+
+                </div>
+            </div>
+        </section>
     </div>
     <!-- --------->
 
