add html tags for resul page

--- a/index.html
+++ b/index.html
@@ -65,10 +65,14 @@
         <!-- ------------------------------------------------------- -->
         <section>
             <div class="result-container">
-                <div class="crown-container"></div>
-                <div class="result-text"></div>
+                <div class="crown-container"> <i class="fas fa-crown"></i></div>
+                <div class="text-container">
+                    <strong>You've completed the Quiz!</strong>
+                    <div class="result-content"></div>
+                </div>
                 <div class="rsltBtn-container">
-
+                    <button></button>
+                    <button></button>
                 </div>
             </div>
         </section>
