add result page buttons html and css styles

--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                     <div class="result-content"></div>
                 </div>
                 <div class="rsltBtn-container">
-                    <button></button>
-                    <button></button>
+                    <button class="replayBtn">Replay Quiz</button>
+                    <button class="quitBtn">Quit Quiz</button>
                 </div>
             </div>
         </section>
