add some comments to index file

--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
                 </div>
             </div>
         </section>
-        <!-- ------------------------------------------------------- -->
+
+        <!-- Result of Quiz  ------------------------------------------------------- -->
         <section>
             <div class="result-container">
                 <div class="crown-container"> <i class="fas fa-crown"></i></div>
