project is prepared

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <p>2. Once you select your answer, it can't be undone.</p>
                     <p>3. You can't select any option once time goes off.</p>
                     <p>4. You can't exit from Quiz while you're playing.</p>
-                    <p>5. You'll get points on the basis of your correct answers.</p>
+                    <p>5. When time's up correct answer will be displayed.</p>
                 </div>
                 <div class="info-buttons">
                     <button class="exit-button">Exit Quiz</button>
